[package]
name = "candle-gguf-server"
version = "0.2.0"
edition = "2021"
description = "OpenAI-compatible API server for GGUF models using Candle"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn" }
candle-transformers = { git = "https://github.com/huggingface/candle", package = "candle-transformers" }

tokenizers = "0.21"

actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

clap = { version = "4", features = ["derive"] }

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1"
rand = "0.8"
anyhow = "1"
thiserror = "1"

bytes = "1"

parking_lot = "0.12"

hf-hub = { version = "0.5", features = ["tokio"] }

tiktoken-rs = { version = "0.5", optional = true }

[features]
default = []
cuda = []
metal = []
tiktoken = ["tiktoken-rs"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
